--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1900,8 +1900,11 @@
     "firmwareFlasherButtonLoading": {
         "message": "Loading..."
     },
-    "firmwareFlasherFlashFirmware": {
-        "message": "[DFU Only] Flash Firmware"
+    "firmwareFlasherFlashFirmwareDFU": {
+        "message": "Flash Firmware [DFU]"
+    },
+    "firmwareFlasherFlashFirmwareAPJ": {
+        "message": "Flash Firmware [APJ]"
     },
     "firmwareFlasherGithubInfoHead": {
         "message": "Github Firmware Info"
